--- a/css/less/content.less
+++ b/css/less/content.less
@@ -1,3 +1,396 @@
 /* ----------------------------------- *\
 			content styles
 \* ----------------------------------- */
+.main-icons-box {
+    padding: 12.8rem 0;
+    background-color: #F0F2F6;
+    .main-title-wrap {
+        color: #303031;
+        .h3-title {
+            color: #616161;
+        }
+    }
+    .items-inner-wrap {
+        max-width: 1015px;
+        margin: 0 auto;
+    }
+    .items-wrap {
+        margin: 0 -1.6rem -4rem -1.6rem;
+    }
+    .item-wrap {
+        padding: 0 1.6rem;
+        margin-bottom: 4rem;
+        width: 25%;
+    }
+}
+.main-card-box {
+    padding: 12.8rem 0;
+    background-color: #F0F2F6;
+    .box-outer-wrap {
+        background: #FFFFFF;
+        border-radius: 32px;
+        padding: 12rem 4rem;
+    }
+    .box-inner-wrap {
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        max-width: 788/24em;
+        width: 100%;
+    }
+    .photo-inner-wrap {
+        width: 35.5rem;
+        flex-shrink: 0;
+    }
+    .info-inner-wrap {
+        width: calc(100% - 35.5rem);
+        padding: 0 0 0 6.4rem;
+        color: #303031;
+    }
+    .main-actions-wrap {
+        justify-content: flex-start;
+    }
+    .main-title-wrap {
+        color: #575759;
+        .h2-title {
+            margin-bottom: 8px;
+        }
+    }
+}
+.main-info-box {
+    .box-inner-wrap {
+        display: flex;
+        align-items: center;
+        padding: 12.8rem 0 12.8rem 0;
+        justify-content: flex-end;
+    }
+    .box-reverse {
+        flex-direction: row-reverse;
+        justify-content: center;
+        .info-inner-wrap {
+            padding: 0 7rem 0 0;
+            max-width: 66rem;
+        }
+    }
+    .photo-inner-wrap {
+        width: 30rem;
+        flex-shrink: 0;
+    }
+    .info-inner-wrap {
+        flex: 1;
+        padding: 0 0 0 10rem;
+        width: calc(100% - 30rem);
+        max-width: 76rem;
+    }
+    .main-actions-wrap, .main-buttons-wrap {
+        justify-content: flex-start;
+        padding-top: 18px;
+    }
+    .h1-title {
+        margin: 0 0 0.35em 0;
+    }
+    p {
+        max-width: 610/24em;
+    }
+}
+.main-app-box {
+    padding: 6.4rem 0 12.8rem 0;
+    background: linear-gradient(180deg, #F0F2F6 0%, #F8FAFF 96.8%);
+    .box-inner-wrap {
+        display: flex;
+        align-items: center;
+    }
+    .title-inner-wrap {
+        width: calc(50% - 14.5rem);
+        flex-shrink: 0;
+        order: 1;
+    }
+    .photo-inner-wrap {
+        width: 29rem;
+        flex-shrink: 0;
+        order: 2;
+    }
+    .text-inner-wrap {
+        width: calc(50% - 14.5rem);
+        padding-left: 6.4rem;
+        flex-shrink: 0;
+        order: 3;
+    }
+    .main-title-wrap {
+        max-width: 66rem;
+    }
+    .main-buttons-wrap {
+        margin-top: 5.5rem;
+    }
+    .h4-title {
+        max-width: 380/48em;
+        margin: 0 0 0 auto;
+    }
+}
+.main-top-box {
+    .inner-wrap {
+        display: flex;
+        align-items: center;
+        padding-top: 10.6rem;
+        padding-bottom: 12.8rem;
+    }
+    .photo-inner-wrap {
+        width: 30rem;
+        flex-shrink: 0;
+    }
+    .info-inner-wrap {
+        flex: 1;
+        width: calc(100% - 30rem);
+        max-width: 84rem;
+    }
+    .main-title {
+        margin: 0 0 0.53em 0;
+    }
+    .actions-wrap {
+        display: flex;
+        margin: 0 -16px 0 0;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .action-button {
+        flex-shrink: 0;
+        padding: 5px 16px 5px 0;
+        margin-right: 3.2rem;
+        &:first-child {
+            margin-right: 0;
+        }
+    }
+    .action-title {
+        font-size: 20px;
+        line-height: 1.4;
+        font-weight: 500;
+        color: #7D7E80;
+        width: 150/20em;
+        padding: 0 5px 0 0;
+        flex-shrink: 0;
+        text-align: left;
+    }
+    .action-link {
+        width: 9.5rem;
+        flex-shrink: 0;
+        display: block;
+    }
+    .action-qr {
+        display: flex;
+        align-items: center;
+    }
+    .btn-action-qr {
+        padding: 0;
+    }
+    .btn-action-app {
+        width: 20.3rem;
+    }
+}
+.tiles-info-box {
+    padding: 10rem 0;
+    .items-wrap {
+        margin: 0 -1.6rem -3.2rem -1.6rem;
+    }
+    .item-wrap {
+        padding: 0 1.6rem;
+        width: 50%;
+        margin-bottom: 3.2rem;
+    }
+}
+.tiles-credits-box {
+    padding: 12.8rem 0 6.4rem 0;
+    background: linear-gradient(178.32deg, #FFFFFF 2.76%, #F0F2F6 98.57%);
+    .items-wrap {
+        margin: 0 -8px;
+    }
+    .item-wrap {
+        padding: 0 8px;
+        width: 25%;
+        margin-bottom: 16px;
+    }
+    .main-buttons-wrap {
+        padding-top: 4.8rem;
+        padding-bottom: 16px;
+    }
+}
+.main-title-wrap {
+    margin-bottom: 6.4rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    color: #575759;
+    .h1-title, .main-title, .h2-title, .h3-title {
+        margin-bottom: 24px;
+    }
+}
+.main-actions-wrap,
+.main-buttons-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 -8px -10px -8px;
+    .button-wrap, .action-wrap {
+        padding: 0 8px;
+        margin-bottom: 10px;
+        flex-shrink: 0;
+    }
+    .action-wrap {
+        padding: 8px;
+        font-size: 16px;
+        line-height: 1.4;
+    }
+    .btn-action-app {
+        width: 20.5rem;
+    }
+    .btn-action-more {
+        padding-left: 16px;
+    }
+}
+@media (max-width: 1023px) {
+    
+    .main-icons-box {
+        .items-wrap {
+            margin: 0 -10px;
+        }
+        .item-wrap {
+            width: 50%;
+            padding: 0 10px;
+        }
+        .items-inner-wrap {
+            max-width: 500px;
+        }
+    }
+    .main-app-box {
+        .text-inner-wrap {
+            padding-left: 30px;
+        }
+    }
+}
+@media (max-width: 767px) {
+    .main-card-box {
+        .box-inner-wrap {
+            align-items: flex-start;
+        }
+    }
+    .main-app-box {
+        .text-body-large {
+            font-size: 18px;
+        }
+    }
+    .tiles-credits-box {
+        .item-wrap {
+            width: 50%;
+        }
+    }
+}
+@media (max-width: 639px) {
+    .main-card-box {
+        .box-inner-wrap {
+            text-align: center;
+            flex-direction: column;
+        }
+        .box-outer-wrap {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        .photo-inner-wrap {
+            max-width: 100%;
+            margin: 0 auto 4rem auto;
+        }
+        .info-inner-wrap {
+            padding: 0;
+            width: 100%;
+            max-width: inherit;
+        }
+        .main-actions-wrap {
+            justify-content: center;
+        }
+    }
+    .main-info-box {
+        .box-inner-wrap {
+            flex-direction: column;
+            .photo-inner-wrap {
+                margin: 0 auto 4rem auto;
+            }
+            .info-inner-wrap {
+                padding: 0;
+                text-align: center;
+                max-width: inherit;
+                width: 100%;
+            }
+        }
+        .main-actions-wrap, .main-buttons-wrap {
+            justify-content: center;
+        }
+        p {
+            max-width: inherit;
+        }
+    }
+    .main-app-box {
+        .box-inner-wrap {
+            flex-direction: column;
+            text-align: center;
+            .title-inner-wrap {
+                padding: 0;
+                width: 100%;
+            }
+            .text-inner-wrap {
+                width: 100%;
+                padding: 0;
+                order: 2;
+            }
+            .photo-inner-wrap {
+                margin: 30px auto 0 auto;
+                order: 3;
+            }
+            .h4-title {
+                margin: 0 0 2.4rem 0;
+                max-width: inherit;
+            }
+        }
+    }
+    .main-top-box {
+        .inner-wrap {
+            display: block;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+        .photo-inner-wrap {
+            margin: 0 auto;
+        }
+        .info-inner-wrap {
+            text-align: center;
+            width: 100%;
+            padding: 0;
+            margin-bottom: 4rem;
+            max-width: inherit;
+        }
+        .actions-wrap {
+            display: block;
+            margin: 0;
+        }
+        .action-button {
+            margin: 0 auto 15px auto;
+            padding: 0;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+        }
+        .action-qr {
+            justify-content: center;
+        }
+    }
+    .tiles-info-box {
+        .item-wrap {
+            width: 100%;
+        }
+    }
+}
+@media (max-width: 479px) {
+    .tiles-credits-box {
+        .item-wrap {
+            width: 100%;
+        }
+    }
+}
