--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,110 @@
 <!-- footer -->
 <footer class="footer">
 	<div class="inner-wrap">
-		333333
+		<div class="main-outer-wrap">
+			<div class="h5-title">Manage money easyly</div>
+			<div class="actions-outer-wrap">
+				<div class="action-wrap">
+					<div class="action-title">Click to download </div>
+					<div class="action-button">
+						<a href="" class="btn-action-app">
+							<img src="./img/button-google.png" alt="">
+						</a>
+					</div>
+					<div class="action-button">
+						<a href="" class="btn-action-app">
+							<img src="./img/button-apple.png" alt="">
+						</a>
+					</div>
+				</div>
+				<div class="action-wrap">
+					<div class="action-title">Scan to download  </div>
+					<div class="action-button">
+						<a href="" class="btn-action-qr">
+							<img src="./img/qr.png" alt="">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="second-outer-wrap">
+			<div class="menu-outer-wrap">
+				<div class="menu-inner-wrap">
+					<div class="menu-wrap">
+						<div class="menu-title">Company</div>
+						<ul class="menu">
+							<li><a href="">Legal</a></li>
+							<li><a href="">About</a></li>
+							<li><a href="">News</a></li>
+							<li><a href="">Contacts</a></li>
+							<li><a href="">For Developers</a></li>
+						</ul>
+					</div>
+					<div class="menu-wrap">
+						<div class="menu-title">Company</div>
+						<ul class="menu">
+							<li><a href="">Legal</a></li>
+							<li><a href="">About</a></li>
+							<li><a href="">News</a></li>
+							<li><a href="">Contacts</a></li>
+							<li><a href="">For Developers</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="soc-wrap">
+					<div class="menu-title">Stay in touch</div>
+					<ul class="menu-soc">
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-tw.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-tg.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-yt.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-rd.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-inst.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-in.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-fb.svg" alt="">
+							</a>
+						</li>
+						<li>
+							<a href="" class="btn-action-ico button-soc">
+								<img src="./img/icons/soc-bk.svg" alt="">
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="desc-outer-wrap">
+				<div class="desc-wrap">
+					<p>ll services relating to cryptoassets are provided by UAB New Software Solutions, a company with legal status of virtual currency exchange operator and depository virtual currency wallet operator. UAB New Software Solutions is an Lithuanian legal entity, registration number 306045667, whose address is Žalgirio g. 90, 6th floor, Vilnius,  Lithuania LT-09303.ll services relating to cryptoassets are provided by UAB New Software Solutions, a company with legal status of virtual currency exchange operator and depository virtual currency wallet operator. UAB New Software Solutions is an Lithuanian legal entity, registration number 306045667, whose address is Žalgirio g. 90, 6th floor, Vilnius, Lithuania LT-09303.  Lithuania LT-09303.ll services relating to cryptoassets are provided by UAB New Software Solutions, a company with legal status of virtual currency exchange operator and depository virtual currency wallet operator. UAB New Software Solutions is an Lithuanian legal entity, registration number 306045667, whose address is Žalgirio g. 90, 6th floor, Vilnius, Lithuania LT-09303.</p>
+				</div>
+			</div>
+		</div>
+		<div class="copy-outer-wrap">Copyright © 2016-2022. All rights reserved. </div>
 	</div>
 </footer>
 <!-- /footer -->
