--- a/css/less/items.less
+++ b/css/less/items.less
@@ -1,16 +1,126 @@
 /* ----------------------------------- *\
 			items styles
 \* ----------------------------------- */
-.item-photo {
+.item-tile-icon {
     display: block;
+    text-align: center;
+    color: #575759;
+    margin: 0 auto;
+    .tile-title {
+        color: #1D1D1F;
+        margin: 0 0 12px 0;
+    }
+    .tile-ico {
+        width: 9.6rem;
+        height: 9.6rem;
+        margin: 0 auto 24px auto;
+    }
+}
+.item-tile-info {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    background: #F0F2F6;
+    border-radius: 32px;
+    padding: 6.4rem 4.8rem;
     position: relative;
     overflow: hidden;
-    text-decoration: none;
-    line-height: 1;
+    &.tile-blue {
+        background: linear-gradient(159.85deg, #3E7EEB 0%, #56B4F3 100%);
+        color: #fff;
+        padding-bottom: 280px;
+        .tile-title {
+            color: inherit;
+        }
+    }
+    .tile-title-wrap {
+        flex: 1;
+        margin-bottom: 3.2rem;
+    }
+    .tile-photo-wrap {
+        width: 405px;
+        height: 293px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+    .tile-photos-wrap {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 -16px -16px 0;
+        .tile-photo {
+            width: 120px;
+            border-radius: 20px;
+            box-shadow: -2px -2px 9px #FFFFFF, 2px 2px 9px rgba(0, 0, 0, 0.15);
+            background-color: #fff;
+            margin: 0 16px 16px 0;
+            &:before {
+                padding-top: 100%;
+            }
+        }
+    }
+    .tile-subtitle {
+        display: block;
+        margin-bottom: 4.8rem;
+        color: #575759;
+    }
+    .tile-ico {
+        width: 8rem;
+        height: 8rem;
+        margin: 0 0 2.4rem 0;
+    }
+    .tile-title {
+        margin: 0;
+        color: var(--clr-att);
+    }
+    .main-actions-wrap {
+        justify-content: flex-start;
+        margin-top: 4.8rem;
+    }
+}
+.item-tile-credit {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    background-color: #fff;
+    border-radius: var(--main-radius);
+    box-shadow: var(--main-shadow);
+    padding: 4rem 2.4rem 0 2.4rem;
+    .tile-title-wrap {
+        flex: 1;
+        width: 100%;
+        padding-bottom: 3.5rem;
+        text-align: center;
+        color: #7D7E80;
+    }
+    .tile-photo-wrap {
+        flex-shrink: 0;
+        margin-left: -2.4rem;
+        margin-right: -2.4rem;
+    }
+    .tile-photo {
+        &:before {
+            padding-top: 100%;
+        }
+    }
+    .tile-title {
+        margin: 0 0 16px 0;
+    }
+    .tile-text {
+        display: block;
+        margin: 0;
+    }
+}
+.elm-screen-main {
+    display: block;
+    position: relative;
+    width: 100%;
+    background-color: fade(#f00, 30);
+    img {opacity: 0.8;}
     &:before {
+        padding-top: 200%;
         content: "";
         display: block;
-        padding-top: 100%;
     }
     img {
         display: block;
@@ -19,26 +129,137 @@
         left: 0;
         width: 100%;
     }
-    &.photo-full {
+    &.screen01 {
+        img {
+            width: 130%;
+            left: -8%;
+            top: -5.3%;
+        }
+    }
+    &.screen02 {
         &:before {
-            display: none;
+            padding-top: 204%;
         }
         img {
-            position: relative;
-            top: auto;
-            bottom: auto;
-            left: auto;
-            right: auto;
+            width: 130%;
+            left: -8%;
+            top: -5.3%;
+        }
+    }
+    &.screen-full {
+        img {
+            width: 100%;
+            left: 0;
+            top: 0;
+        }
+    }
+    &.screen-card {
+        &:before {
+            padding-top: 63.09%;
+        }
+        img {
+            top: -5%;
+            left: -5%;
+            width: 114%;
         }
     }
 }
-.elm-ico, .button-ico, .menu-ico, .frm-ico {
+.elm-screen {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    width: 500px;
+    &:before {
+        content: "";
+        display: block;
+        padding-top: 196.09%;
+    }
+    &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: url(../img/phone.svg) center no-repeat;
+        background-size: auto 100%;
+        z-index: 3;
+    }
+    img {
+        display: block;
+        position: absolute;
+        top: 2%;
+        left: 6%;
+        width: 88%;
+    }
+}
+.elm-photo, .tile-photo {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    text-decoration: none;
+    line-height: 1;
+    transform: translateZ(0);
+    &.photo-main {
+        border: 1px solid #f00;
+        width: 300px;
+        height: 300px;
+    }
+    &:before {
+        content: "";
+        display: none;
+        padding-top: 100%;
+    }
+    img {
+        display: block;
+        position: relative;
+        width: 100%;
+    }
+    &.photo-cover {
+        &:before {
+            display: block;
+        }
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    &.photo-contain {
+        &:before {
+            display: block;
+        }
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            margin: auto;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+        }
+    }
+}
+.elm-price, .tile-price {
+    white-space: nowrap;
+    &.price-old {
+        text-decoration: line-through;
+    }
+}
+.elm-ico, .button-ico, .menu-ico, .frm-ico, .tab-ico, .tile-ico {
     display: block;
     position: relative;
     overflow: hidden;
     width: 40px;
     height: 40px;
-    img, .i, svg {
+    img, [class*="icon-"], .i, svg {
         display: block;
         position: absolute;
         top: 0;
@@ -48,5 +269,36 @@
         margin: auto;
         max-width: 100%;
         max-height: 100%;
+    }
+}
+.elm-overlay {
+    display: none;
+    animation: fadein ease 0.2s;
+    background: fade(#000, 80);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 120;
+    &.active {
+        display: block;
+    }
+}
+@media (max-width: 1023px) {
+    .item-tile-info {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+@media (max-width: 767px) {
+    .item-tile-info {
+        padding-left: 20px;
+        padding-right: 20px;
+        .tile-photos-wrap {
+            .tile-photo {
+                width: 100px;
+            }
+        }
     }
 }
