--- a/css/less/main.less
+++ b/css/less/main.less
@@ -1,9 +1,20 @@
 :root {
-	--clr-base: #000;
-	--clr-att: #f00;
+	--clr-base: #303031;
+    --clr-base-dark: #000;
+    --clr-title: #121214;
+	--clr-att: #2169FC;
+	--clr-att-second: #0029FF;
+	--clr-light: #e4e4e;
+    
+    --main-radius: 1.6rem;
+    
+    --main-shadow: 3px 5px 24px rgba(45, 47, 64, 0.08);
+    --main-shadow-hover: 4px 12px 24px rgba(0, 0, 0, 0.24), 0.5px 0.5px 0px rgba(0, 0, 0, 0.5);
 
 	--min: 320px;
-	--max: 1200px;
+	--max: 1300px;
+    
+    --paddingContainer: 15px;
 
 	font-size: 10px;
 }
@@ -17,11 +28,14 @@
 			main styles
 \* ----------------------------------- */
 body {
-	color: var(--clr-base, #000);
+	color: var(--clr-base);
 	background: #fff;
+    font-size: 14px;
+    line-height: 18/14;
 }
-p, ul, ol {
+p, ul, ol, table, blockquote, .bq-text {
 	position: relative;
+    margin-bottom: 18/14em;
 	img {
 		max-width: 100%;
 	}
@@ -29,25 +43,27 @@ p, ul, ol {
 		margin-bottom: 0 !important;
 	}
 }
-
 li {
 	position: relative;
 }
 a {
-	text-decoration: none;
-	color: var(--clr-att, #f00);
-	&:hover {
-		text-decoration: none;
-		color: var(--clr-att, #f00);
-	}
+    text-decoration: none;
+    color: var(--clr-att);
+    &:hover {
+        text-decoration: none;
+        color: var(--clr-att-second);
+    }
 }
 a.link-main, .link-main {
-	text-decoration: none;
-	border-bottom: 1px solid;
-	&:hover {
-		border-bottom: none;
-	}
+    text-decoration: none;
+    border-bottom: 1px solid;
+    &:hover {
+    }
 }
+.link-phone {
+    white-space: nowrap;
+}
+.main-title, 
 h1, .h1-title,
 h2, .h2-title,
 h3, .h3-title,
@@ -56,7 +72,203 @@ h5, .h5-title,
 h6, .h6-title {
 	display: block;
 	position: relative;
+    margin: 1em 0;
+    color: var(--clr-title);
+    font-size: 8.8rem;
+    line-height: 1.1;
+    font-weight: 600;
+    letter-spacing: -0.02em;
     &:first-child {
         margin-top: 0;
+    }
+}
+h1, .h1-title {
+    font-size: 7.2rem;
+    line-height: 1.2;
+}
+h2, .h2-title {
+    font-size: 6.4rem;
+}
+h3, .h3-title {
+    font-size: 5.6rem;
+}
+h4, .h4-title {
+    font-size: 4.8rem;
+    line-height: 1.2;
+}
+h5, .h5-title {
+    font-size: 3.6rem;
+    line-height: 1.2;
+}
+h6, .h6-title {
+    font-size: 24px;
+    line-height: 1.2;
+}
+.text-body, .text-body-small, .text-body-large, .text-body-main, .text-body-note, .text-body-min {
+    font-size: 24px;
+    line-height: 1.4;
+    font-weight: 500;
+}
+.text-body-large {
+    font-size: 3.2rem;
+}
+.text-body-small {
+    font-size: 20px;
+}
+.text-body-main {
+    font-size: 18px;
+    line-height: 26/18;
+}
+.text-body-min {
+    font-size: 18px;
+    line-height: 22/18;
+}
+.text-body-note {
+    font-size: 16px;
+}
+.text-att, .title-att {
+    color: var(--clr-att);
+}
+.text-light, .title-light {
+    color: var(--clr-light);
+}
+.text-center, .title-center {
+    text-align: center;
+}
+
+.title-gradient {
+    background: linear-gradient(89.86deg, #0039AD 0.12%, #3678FF 82.24%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    &.gr02 {
+        background-image: linear-gradient(159.85deg, #3E7EEB 0%, #56B4F3 100%);
+    }
+    &.gr03 {
+        background-image: linear-gradient(90deg, #0029FF 0%, #ED7DCE 100%);
+    }
+    &.gr04 {
+        background-image: linear-gradient(90deg, #33B78F 0%, #00543A 100%);
+    }
+    &.gr05 {
+        background-image: linear-gradient(90deg, #33B78F 0%, #019E6F 100%);
+    }
+    &.gr06 {
+        background-image: linear-gradient(159.85deg, #059DB7 0%, #3BD7BD 100%);
+    }
+    &.gr07 {
+        background-image: linear-gradient(266.16deg, #151339 0%, #654B6A 100%);
+    }
+    &.gr08 {
+        background-image: linear-gradient(108.07deg, #111584 0%, #8178EB 100%);
+    }
+    &.gr09 {
+        background-image: linear-gradient(90deg, #FED185 0%, #F96E7A 21.87%, #A660FA 60.42%, #37D7F3 100%);
+    }
+    &.gr10 {
+        background-image: linear-gradient(90.36deg, #EC9A86 2.6%, #E58CA6 23.79%, #C18CD0 77.53%, #929BE3 101.82%);
+    }
+}
+@media (max-width: 1399px) {
+    :root {
+        font-size: 9.5px;
+    }
+}
+@media (max-width: 1199px) {
+    :root {
+        font-size: 9px;
+    }
+}
+@media (max-width: 1023px) {
+    :root {
+        font-size: 8px;
+    }
+
+
+    .text-body {
+        font-size: 20px;
+    }
+    .text-body-large {
+        font-size: 3rem;
+    }
+    .text-body-small {
+        font-size: 18px;
+    }
+    
+    .main-title, h1, .h1-title, h2, .h2-title {
+        font-size: 6rem;
+    }
+    h1, .h1-title {
+        font-size: 5.4rem;
+    }
+    h2, .h2-title {
+        font-size: 4.4rem;
+    }
+    h3, .h3-title {
+        font-size: 4rem;
+    }
+    h4, .h4-title {
+        font-size: 3.6rem;
+    }
+    h5, .h5-title {
+        font-size: 3rem;
+    }
+    h6, .h6-title {
+        font-size: 20px;
+    }
+}
+@media (max-width: 767px) {
+    :root {
+        font-size: 7px;
+    }
+}
+@media (max-width: 479px) {
+    .main-title, h1, .h1-title, h2, .h2-title {
+        font-size: 5rem;
+    }
+
+    .text-body {
+        font-size: 18px;
+    }
+    .text-body-large {
+        font-size: 2.6rem;
+    }
+    .text-body-small {
+        font-size: 16px;
+    }
+    .text-body-main {
+        font-size: 16px;
+    }
+    .text-body-min {
+        font-size: 16px;
+    }
+    .text-body-note {
+        font-size: 14px;
+    }
+    
+    
+    h1, .h1-title {
+        font-size: 4.5rem;
+    }
+    h2, .h2-title {
+        font-size: 3.8rem;
+    }
+    h3, .h3-title {
+        font-size: 3.2rem;
+    }
+    h4, .h4-title {
+        font-size: 3rem;
+    }
+    h5, .h5-title {
+        font-size: 3rem;
+    }
+    h6, .h6-title {
+        font-size: 20px;
+    }
+}
+@media (min-width: 1024px) {
+    :root {
+        --paddingContainer: 30px;
     }
 }
